translate functionality to armeria